# compchess

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .env  Anchor.toml  package-lock.json  package.json
backend/programs/backend/: Cargo.toml
backend/programs/backend/src/: lib.rs
backend/tests/: backend.ts
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: ChessGame.tsx
src/: App.tsx  index.css
src/components/: ChessboardPreview.tsx
src/components/auth/: AuthProvider.tsx  RequireAuth.tsx
src/components/dashboard/: AvailableGames.tsx  DashboardHeader.tsx  GameModeCard.tsx  GameModes.tsx
src/components/home/: ChessboardPreview.tsx  FeatureCard.tsx  Features.tsx  Hero.tsx
src/components/layout/: NavLink.tsx  Navigation.tsx  WalletButton.tsx
src/components/tournament/: CreateTournamentDialog.tsx  TournamentCard.tsx
src/integrations/supabase/: client.ts  types.ts
src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx  Practice.tsx  PvP.tsx  Tournament.tsx  chess-game.tsx  select-difficulty.tsx
supabase/: config.toml
