[package]
name = "backend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "backend"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"  
solana-program = "1.18.25"  
spl-token = { version = "3.4.1", features = ["no-entrypoint"] }  
spl-associated-token-account = "1.1.3"  
